# lz4xx

./: CMakeLists.txt  LICENSE  README.md
examples/: example1.cpp  example2.cpp  lz4xx_example.cpp
include/: lz4xx.h
src/: lz4xx.cpp
